# urcell_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/image_saver_pkg/lib/image_saver_pkg/: one_shot_image_saver
install/image_saver_pkg/share/image_saver_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/opencv_services/include/opencv_services/opencv_services/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/opencv_services/include/opencv_services/opencv_services/srv/: parts_targets_pos.h  parts_targets_pos.hpp
install/opencv_services/share/ament_index/resource_index/package_run_dependencies/: opencv_services
install/opencv_services/share/ament_index/resource_index/parent_prefix_path/: opencv_services
install/opencv_services/share/ament_index/resource_index/rosidl_interfaces/: opencv_services
install/opencv_services/share/opencv_services/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/opencv_services/share/opencv_services/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_opencv_services__rosidl_generator_cExport.cmake  export_opencv_services__rosidl_generator_cppExport.cmake  export_opencv_services__rosidl_generator_pyExport-noconfig.cmake  export_opencv_services__rosidl_typesupport_fastrtps_cExport.cmake  export_opencv_services__rosidl_typesupport_fastrtps_cppExport.cmake  opencv_servicesConfig.cmake  opencv_services__rosidl_typesupport_cExport-noconfig.cmake  opencv_services__rosidl_typesupport_cExport.cmake  opencv_services__rosidl_typesupport_cppExport-noconfig.cmake  opencv_services__rosidl_typesupport_introspection_cExport-noconfig.cmake  opencv_services__rosidl_typesupport_introspection_cExport.cmake  opencv_services__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/opencv_services/share/opencv_services/srv/: PartsTargetsPos.idl  PartsTargetsPos_Response.msg
install/urcell_description/share/ament_index/resource_index/package_run_dependencies/: urcell_description
install/urcell_description/share/urcell_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/urcell_description/share/urcell_description/config/: ros2_controllers.yaml  urcell_config.rviz
install/urcell_description/share/urcell_description/ros2_control/: urcell.ros2_control.xacro
install/urcell_moveit_config/share/ament_index/resource_index/package_run_dependencies/: urcell_moveit_config
install/urcell_moveit_config/share/urcell_moveit_config/: .setup_assistant  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/urcell_moveit_config/share/urcell_moveit_config/config/: initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
install/urcell_moveit_config/share/urcell_moveit_config/launch/: rsp.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
install/urcell_moveit_sim/lib/urcell_moveit_sim/: moveit_robot_control
install/urcell_moveit_sim/share/ament_index/resource_index/package_run_dependencies/: urcell_moveit_sim
install/urcell_moveit_sim/share/ament_index/resource_index/parent_prefix_path/: urcell_moveit_sim
install/urcell_moveit_sim/share/urcell_moveit_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/urcell_moveit_sim/share/urcell_moveit_sim/cmake/: urcell_moveit_simConfig.cmake
install/urcell_sim/share/ament_index/resource_index/package_run_dependencies/: urcell_sim
install/urcell_sim/share/urcell_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/urcell_sim/share/urcell_sim/cmake/: urcell_simConfig.cmake
install/urcell_sim/share/urcell_sim/launch/: simular.launch.py
install/urcell_sim/share/urcell_sim/worlds/: cokeworld.sdf  e_box2.stl
install/yolobot_recognition/lib/yolobot_recognition/: yolov8_ros2_pt.py
install/yolobot_recognition/share/yolobot_recognition/: local_setup.sh  package.sh
install/yolov8_msgs/share/yolov8_msgs/: package.sh
install/yolov8_msgs/share/yolov8_msgs/cmake/: export_yolov8_msgs__rosidl_generator_cExport.cmake  export_yolov8_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  yolov8_msgs__rosidl_typesupport_cppExport.cmake  yolov8_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/yolov8_msgs/share/yolov8_msgs/msg/: InferenceResult.msg
log/: latest_build
src/image_saver_pkg/: readme.md  setup.py
src/image_saver_pkg/image_saver_pkg/: one_shot_image_saver.py
src/opencv_services/: CMakeLists.txt  package.xml
src/opencv_services/src/: opencv_extract_object_positions.cpp
src/opencv_services/srv/: PartsTargetsPos.srv
src/urcell_description/: CMakeLists.txt
src/urcell_description/gazebo/: urcell.gazebo.xacro
src/urcell_description/launch/: display.launch.py
src/urcell_description/urdf/: model.urdf.xacro
src/urcell_description/urdf/parts/customGripper/: customGripper.urdf.xacro
src/urcell_description/urdf/parts/fixedparts/: fixedobjects.urdf.xacro
src/urcell_moveit_config/: CMakeLists.txt  package.xml
src/urcell_moveit_config/config/: joint_limits.yaml  model.ros2_control.xacro  model.srdf  model.urdf.xacro
src/urcell_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py
src/urcell_moveit_sim/: CMakeLists.txt
src/urcell_moveit_sim/launch/: mover.launch.py
src/urcell_moveit_sim/src/: automoveit_robot_control.cpp
src/urcell_sim/: CMakeLists.txt
src/urcell_sim/config/: urcell_sim_config.rviz
src/urcell_sim/worlds/: e_box2.dae
src/yolobot_recognition/: CMakeLists.txt
src/yolobot_recognition/scripts/: yolov8_ros2_subscriber.py
src/yolov8_msgs/: CMakeLists.txt  package.xml
(+17 files in other folders)
